@@ -1,3 +1,4 @@
+0.4.0-0 @12/1/2003 22:00:00 UTC@
 0.3.0-0 @12/1/2003 21:30:00 UTC@
 0.2.2-0 @09/14/2003 16:18:20 GMT@
 0.2.1-10 @12/18/2002 15:34:40 GMT@
